--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_others.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_others.html
@@ -12,38 +12,6 @@
 		font-size: 0.9rem;
 		font-family: "华文细黑";
 	}
-	.xui-header{
-		background: #ee3715;
-		overflow: hidden;
-		padding: 15px 0;
-		color: #fff;
-		margin-top: 2px;
-		font-size: 0;
-	}
-	.xui-header > div {
-		display: inline-block;
-		width: 50%;
-		box-sizing: border-box;
-	}
-	.xui-header-left{
-		border-right: 1px dotted #f3735c;
-		padding-left: 35px;
-	}
-	.xui-header-right{
-		padding-left: 30px;
-	}
-	.xui-large{
-		font-size: 1.7rem;
-		font-family: "Arial";
-	}
-	.xui-phone-num{
-		margin-bottom: 15px;
-		font-size: 1rem;
-		font-family: "Arial";
-	}
-	.xui-phone-num img{
-		margin-right: 2px;
-	}
 	.xui-remain{
 		margin-bottom: 10px;
 	}
@@ -71,7 +39,6 @@
 	.xui-detail-left .xui-valid-time{
 		font-family: 'Microsoft Yahei';
 		font-size: 0.7rem;
-		color: #666666;
 	}
 	.xui-detail-right{
 		float: right;
@@ -84,12 +51,13 @@
 		padding-left: 10px;
 	}
 	.xui-remain-money{
-		margin-top: 7px;
+		margin-top: 8px;
 		color: #ee3715;
 	}
-	.xui-remain-money > span{
-		color: #666666;
+	.xui-remain-money span:first-child{
+		color: #333;
 		vertical-align: text-bottom;
+		margin-right: 5px;
 		font-family: 'Microsoft Yahei';
 		font-size: 1.1rem;
 	}
@@ -181,6 +149,17 @@
     	right: 5px;
     	bottom: 0;
     }
+    @media only screen and (max-width: 320px){
+    .xui-tab-normal{
+    	font-size: 0.9rem;
+    }
+    .xui-tab-active{
+    	font-size: 1rem;
+    }
+    .xui-detail-top{
+    	padding-right: 0;
+    }
+}
 </style>
 {% endblock %}
 
@@ -190,29 +169,28 @@
 		{% if is_weshop %}
 		<div class="xui-notBind">
 			<div class="xui-tab">
-				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_exchange_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_wallet=1
-		" style="border-right: 1px solid #f5f5f5;">微众卡包</a>
+				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_wallet&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" style="border-right: 1px solid #f5f5f5;">微众卡包</a>
 				<div class="xui-tab-active">其他卡包</div>
-				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" style="border-left: 1px solid #f5f5f5;">微众卡余额查询</a>
+				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_query=0" style="border-left: 1px solid #f5f5f5;">微众卡余额查询</a>
 				
 			</div>
 		</div>
 		{% endif %}
 		<div class="xui-content">
 			<div class="xui-valid-card">
-				{% for item in cards.card %}
-				{% if item.is_expired == 0 and item.status != 3 %}
+				{% for item in cards %}
+				{% if item.is_expired == 0%}
 				<div class="xui-wrap">
 					<div class="xui-card-details">
 						<div class="xui-detail-top">
 							<div class="xui-detail-left">
-								<div class="xui-valid-time">有效期:{{item.time}}~{{item.time}}</div>
+								<div class="xui-valid-time">有效期:{{item.validate_time_from | slice:"10"}}~{{item.validate_time_to | slice:"10"}}</div>
 								<div class="xui-remain-money">
-									<span>名字什么的都是浮云</span>
+									<span>{{item.name}}</span>
 								</div>
 							</div>
 							<div class="xui-detail-right">
-								<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=card_exchange_detail&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id={{item.card_id}}" class="xui-check-detail">查看详情</a>
+								<a href="./mall/product/?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{item.product_id}}" class="xui-check-detail">查看详情</a>
 								<div>
 									<span>卡号:</span> 
 									<span class="xui-numfont">{{item.card_id}}</span>
@@ -221,11 +199,13 @@
 						</div>
 						<div class="xui-detail-bottom">
 							<span>
-								下单时间:
-								<span class="xui-numfont">{{item.time}}</span>
+								到账时间:
+								<span class="xui-numfont">{{item.time | slice:"10"}}</span>
 								<span class="fr">
+									{% if item.password %}
 									密码:
-									<span class="xui-numfont">{{item.passwprd}}</span>
+									<span class="xui-numfont">{{item.password}}</span>
+									{% endif %}
 								</span>
 							</span>
 						</div>
@@ -241,19 +221,19 @@
 					<b></b>
 					<span>失效卡：</span>
 				</div>
-				{% for item in cards.card %}
-				{% if item.is_expired == 1 or item.status == 3 %}
+				{% for item in cards %}
+				{% if item.is_expired == 1 %}
 				<div class="xui-wrap">
 					<div class="xui-card-details">
 						<div class="xui-detail-top">
 							<div class="xui-detail-left">
-								<div class="xui-valid-time">有效期:{{item.time}}~{{item.time}}</div>
+								<div class="xui-valid-time">有效期:{{item.validate_time_from | slice:"10"}}~{{item.validate_time_to | slice:"10"}}</div>
 								<div class="xui-remain-money">
-									<span>名字什么的都是浮云</span>
+									<span>{{item.name}}</span>
 								</div>
 							</div>
 							<div class="xui-detail-right">
-								<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=card_exchange_detail&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id={{item.card_id}}" class="xui-check-detail">查看详情</a>
+								<a href="./mall/product/?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{item.product_id}}" class="xui-check-detail">查看详情</a>
 								<div class="xui-card-num">
 									<span>卡号:</span> 
 									<span class="xui-numfont">{{item.card_id}}</span>
@@ -263,11 +243,13 @@
 						<div class="xui-detail-bottom">
 							<div class="xui-invalid-seal"></div>
 							<span>
-								下单时间:
-								<span class="xui-numfont">{{item.time}}</span>
+								到账时间:
+								<span class="xui-numfont">{{item.time | slice:"10"}}</span>
 								<span class="fr">
+									{% if item.password %}
 									密码:
 									<span class="xui-numfont">{{item.password}}</span>
+									{% endif %}
 								</span>
 							</span>
 						</div>
