[f_mall_9612][侯庭飞]导出居中

--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -11,6 +11,9 @@
 #exportProgress .exportProgress_msg{
 	margin-right:0;
 }
+#downloadLink{
+  margin:4px 10px!important;
+}
 </style>
 {% endblock %}
 
