会员列表、会员详情好友数改为推荐数；列表页推荐数为0时依然可点击，并出弹窗

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -62,8 +62,8 @@
 					<p>微众卡使用金额</p>
 				</dd>
 				<dd>
-					<p><a href="javascript:void(0);" class="relation-text">{{show_member.friend_count}}</a></p>
-					<p>好友数</p>
+					<p><a href="javascript:void(0);" class="relation-text">{{fans_count}}</a></p>
+					<p>推荐数</p>
 				</dd>
 			</dl>
 			<div class="fr" style="margin-top:-15px;">
