【微众商城】代售卡码区分

--- a/weapp/mall/templates/mall/editor/promotion/virtual_product_codes.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_product_codes.html
@@ -19,7 +19,7 @@
 	<div class="panel panel-default mt20 xui-bigBoxbg">
 		<div class="panel panel-default ml10 mr10 mb50" style="border:none;">
 			<div class="panel-heading xui-headStyle pl18 ovh"  style="background:#E9EDF5; margin-left: -2px;">
-				<a href="/mall2/virtual_product_codes_export/?virtual_product_id={{virtual_product.id}}" class="btn btn-default ">导出所有</a>
+				<a href="/mall2/virtual_product_codes_export/?virtual_product_id={{virtual_product.id}}" class="btn btn-default fr">导出所有</a>
 			</div>
 			<div
 				data-ui-role="advanced-table"
