--- a/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/create_rebate_rule.html
@@ -105,7 +105,7 @@
                 <input type="hidden" id="file_path">
                 <!--<input type="text" class="form-control w70" id="weizoom_card_id_from" name="weizoom_card_id_from" value="{{rebate_rule.weizoom_card_id_from}}" data-validate="require-notempty,,require-nonnegative"/>-->
                 <!--<input type="text" class="form-control w70" id="weizoom_card_id_to" name="weizoom_card_id_to" value="{{rebate_rule.weizoom_card_id_to}}" data-validate="require-notempty,,require-nonnegative"/>-->
-            <span class="xa-exchangeStock">{% if card_stock %}库存：{{card_stock}}{% endif %}</span>
+            <span class="xa-exchangeStock">{% if rebate_rule.id %}库存：{{card_stock}}{% endif %}</span>
             <span><a target="_blank" {% if rebate_rule %} href="/apps/rebate/card_details/?id={{ rebate_rule.id }}" {% else %}{% endif %} class="xui-detail" title="发放详情">发放详情</a></span>
             </div>
             <!--<div class="errorHint" data-error-hint="请输入数字"></div>-->
