--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_info_normal.html
@@ -58,7 +58,7 @@
 				<div style="clear: both"></div>
 			</div>
 		{% endif %}
-		<a class="xui-searchOther" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{ request.webapp_owner_id }}&project_id=0">
+		<a class="xui-searchOther" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{ request.webapp_owner_id }}&project_id=0&is_query=0">
 			<span>查询另一张微众卡余额</span>
 			<img alt="" src="/static_v2/img/webapp/mall/right_arrow.png">
 		</a>
@@ -72,7 +72,7 @@
 					<thead>
 						<tr>
 							<td width="25%">时间</td>
-{#							<td width="25%">明细</td>#}
+							<td width="25%">明细</td>
 							<td>去处/来源</td>
 						</tr>
 					</thead>
@@ -83,23 +83,23 @@
 								{{order.created_at | date:"Y/m/d"}}<br/>
 								{{order.created_at | date:"H:i:s"}}
 							</td>
-{#							<td class="xui-order-info-money">#}
-{#								{% if order.is_product %}#}
-{#									{% if order.money < '0' %}#}
-{#										<span style="color: #0fb202">#}
-{#											+{{order.money| slice:"1:"}}#}
-{#										</span>#}
-{#									{% else %}#}
-{#										<span style="color: #cf0404">#}
-{#											-{{order.money}}#}
-{#										</span>#}
-{#									{% endif %}#}
-{#								{% else %}#}
-{#									<span style="color: #0fb202">#}
-{#										+{{order.money}}#}
-{#									</span>#}
-{#								{% endif %}#}
-{#							</td>#}
+							<td class="xui-order-info-money">
+								{% if order.is_product %}
+									{% if order.money < '0' %}
+										<span style="color: #0fb202">
+											+{{order.money| slice:"1:"}}
+										</span>
+									{% else %}
+										<span style="color: #cf0404">
+											-{{order.money}}
+										</span>
+									{% endif %}
+								{% else %}
+									<span style="color: #0fb202">
+										+{{order.money}}
+									</span>
+								{% endif %}
+							</td>
 							<td class="xui-order-info-name">
 								{{order.product_name}}
 							</td>
