--- a/weapp/stats/templates/sales/order_summary.html
+++ b/weapp/stats/templates/sales/order_summary.html
@@ -443,6 +443,12 @@
 				name: '微众卡支付'
 			});
 		}
+		if(stats_data.bestpay_amount > 0) {
+			data_array.push({
+				value: stats_data.bestpay_amount.toFixed(2),
+				name: '微众卡支付'
+			});
+		}
 		if(data_array.length == 0){
 			data_array.push({});
 		}
