--- a/weapp/account/templates/account/landing/index.html
+++ b/weapp/account/templates/account/landing/index.html
@@ -61,7 +61,7 @@ $(document).ready(function() {
 	$('.xa-login').click(function(){
 		login();
 	});
-	$('[name=username],[name=password]').keyup(function(){ 
+	$('[name=username],[name=password]').keyup(function(event){ 
 		if(event.keyCode == 13){
 			login();
 		}
