--- a/weapp/static_v2/js/view/weixin_menu_link_view/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_link_view/template.html
@@ -12,6 +12,7 @@
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="memberQrcode">推广扫码</a></li>
     {{/if}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="channelQrcode">代言人二维码</a></li>
+    <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="evaluate">待评价列表</a></li>
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="myOrder">我的订单</a></li>
     {{if shengjing}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
