--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -14,6 +14,53 @@
 .modal-body .fl > div{
     margin-bottom: 5px;
 }
+.xui-modal-content{
+    overflow:hidden;
+    margin-top:10px;
+}
+.xui-app_evaluate-Dialog .modal-body{
+    padding:0 30px;
+}
+.xui-evaluate-modalLef{
+    width:50%;
+    box-sizing:border-box;
+    border-right:1px solid #e1e1e1;
+    padding-bottom: 20px;
+}
+.xui-evaluate-comment{
+    display:inline-block;width:330px;
+}
+.xui-evaluate-modalRig{
+    width:50%;
+    box-sizing:border-box;
+    padding-left:10px;
+}
+.xui-evalute-btnGroups{
+    border-bottom:2px solid #e1e1e1;
+    padding-bottom:15px;
+    text-align:center;
+    margin-bottom:20px;
+    margin-top:15px;
+}
+.xui-evalute-btnGroups > a{
+    font-weight:bold;
+    border-radius:3px;
+}
+.xui-evalute-modalFooter{
+    background:#eaeef7;
+    margin-top:10px;
+    height:50px;
+    line-height:50px;
+}
+.xui-evaluate-table{
+    margin-top: 10px;
+}
+.xui-evaluate-table > tbody> tr > td{
+    text-align: left;
+}
+.xui-evaluate-table > tbody > tr > td:last-child{
+    width: 70%;
+}
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -101,18 +148,18 @@
             <td width="100">${review.status.name}</td>
             <td width="80">
                 {{if review.status.value === '0'}}
-                    <a data-id=${review.id} class="xa-verify">审核</a>
+                    <a href="javascript:void(0);" data-product-review-id="${review.id}" class="xa-verify">审核</a>
                 {{/if}}
                 {{if review.status.value === '1'}}
-                    <a href="/mall2/product_review/?id=${review.id}">修改</a>&nbsp;&nbsp;
+                    <a href="javascript:void(0);" data-product-review-id="${review.id}" class="xa-verify">修改</a>&nbsp;&nbsp;
                     <a href="javascript:void(0);" class="xa-modify" data-product-review-id="${review.id}" data-status="2">置顶</a>
                 {{/if}}
                 {{if review.status.value === '2'}}
-                    <a href="/mall2/product_review/?id=${review.id}">修改</a><br>
+                    <a href="javascript:void(0);" data-product-review-id="${review.id}" class="xa-verify">修改</a><br>
                     <a href="javascript:void(0);" class="xa-modify" data-product-review-id="${review.id}" data-status="1">取消置顶</a>
                 {{/if}}
                 {{if review.status.value === '-1'}}
-                    <a href="/mall2/product_review/?id=${review.id}">修改</a>
+                    <a href="javascript:void(0);" data-product-review-id="${review.id}" class="xa-verify">修改</a>
                 {{/if}}
             </td>
         </tr>
@@ -219,9 +266,9 @@ $(document).ready(function(){
     };
 
     $('.panel-body').delegate('.xa-verify','click',function(){
-        var activityId = $(this).attr('data-id');
+        var product_review_id = $(this).attr('data-id');
         W.dialog.showDialog('W.dialog.app.evaluate.ViewParticipanceDataDialog',{
-            activityId: activityId,
+            product_review_id: product_review_id,
             success: function(data) {
                 // alert(data);
             }
